Avoid overflow on long object/instance type <select>

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -335,3 +335,8 @@ td.spurConnector .hidden {
 td.zero, td.zero * {
 	color:gray;
 }
+
+.content.config select {
+	width:100%;
+	max-width:100%;
+}
